--- a/BrowseUser.html
+++ b/BrowseUser.html
@@ -16,8 +16,8 @@
 
 
       <form action="#">
-        <h3>John Smith</h3>
-        <h4>24</h4>
+        <h2>John Smith, 24</h2>
+        <hr>
         <h4>Limerick</h4>
         <h4>Student</h4>
         <h4>University Of Limerick</h4>
