--- a/BrowseUser.html
+++ b/BrowseUser.html
@@ -15,19 +15,33 @@
 
 
 
-      <form action="#">
+      <div class="NameLocation">
         <h2>John Smith, 24</h2>
-        <hr>
-        <h4>Limerick</h4>
-        <h4>Student</h4>
-        <h4>University Of Limerick</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rhoncus nisi suscipit metus tincidunt, quis gravida nibh tristique. Sed fermentum sodales eros. Vestibulum at dapibus nisl. Suspendisse vitae dui ac orci tempus tincidunt in quis nunc.</p>
+        <p style="text-align: left;">from Limerick</p>
+      </div>
 
-        <button>Yes</button>
-        <button>No</button>
+      <div class="JobUni">
+        <p style="padding: 10px;">Student</p>
+        <p style="padding: 10px;">University Of Limerick</p>
+      </div>
+
+      <div class="hobbies">
+        <p style="padding: 20px;">Swimming, Football, Reading</p>
+      </div>
+
+
+      <div class="JobUni">
+               <p style="padding: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur rhoncus nisi suscipit metus tincidunt, quis gravida nibh tristique. Sed fermentum sodales eros. Vestibulum at dapibus nisl. Suspendisse vitae dui ac orci tempus tincidunt in quis nunc.</p>
+      </div>
+
+
+ 
+      <h3 style="text-align: center;">Interested?</h3>
+        <button style="background-color: #b3ffcc;">Yes</button>
+        <button style="background-color: #ffad99;">No</button>
                 
         
-      </form>
+
     </div>
   </div>
 </body>
