--- a/Menu.html
+++ b/Menu.html
@@ -29,8 +29,16 @@
           <button style="background-color: #bfbfbf;" type="submit" class="float">Best Match</button>
         </div>
 
+        <div class="Update Information">
+          <button  type="submit" class="float">Update Information</button>
+        </div>
+
+        <div class="View Profile">
+          <button style="background-color: #bfbfbf;" type="submit" class="float">View Profile</button>
+        </div>
+
         <div class="Logout">
-          <button type="submit" class="float">Logout</button>
+          <button  type="submit" class="float">Logout</button>
         </div>
 
                 
