--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<h3><a href="Menu.html">Menu</a> </h3>
 	<h3><a href="changePreferences.html">Change Preferences</a> </h3>
 	<h3><a href="BrowseUser.html">Browse User</a> </h3>
+	<h3><a href="AdminMenu.html">Admin Menu</a> </h3>
 
 </body>
 </html>
