--- a/EditUser.html
+++ b/EditUser.html
@@ -10,19 +10,21 @@
 
     <div class="heading">
 
-      <h1>User Details</h1>
+      <h1>John Smith - User Details</h1>
 
       <form action="#">
 
+
+
         <div class="image-button">
-          <button type="submit" class="float">Upload Picture</button>
+          <button type="submit" class="float">Change Picture</button>
         </div>
 
 
         <div class="input-user">
           <h3>Name:</h3>
-          <input type="text" class="form-control" placeholder="First Name">
-          <input type="text" class="form-control" placeholder="Surname">
+          <input type="text" class="form-control" placeholder="John">
+          <input type="text" class="form-control" placeholder="Smith">
         </div>
 
         <h3>Gender:</h3>
@@ -55,7 +57,7 @@
 
         <div class="Bio">
           <h3>Bio :</h3>
-          <input style="height: 200px;" type="text" placeholder="">
+          <input style="height: 200px;" type="text" placeholder="Change bio....">
         </div>
 
 
@@ -81,21 +83,10 @@
           <option value="Swimming">Swimming</option>
         </select>
 
-                
-
-
-                <h3>Interested In:</h3>
-        <select name="Interest" id="Interest">
-          <option value="Male">Male</option>
-          <option value="Female">Female</option>
-          <option value="Female">Both</option>
-        </select>
-
-
 
 
         <div class="submit-button">
-          <button type="submit" class="float">Submit Profile</button>
+          <button type="submit" class="float">Update Profile</button>
         </div>
 
                 
