Updated Website Name

--- a/Login.html
+++ b/Login.html
@@ -4,8 +4,8 @@
    <link rel="stylesheet" href="LoginStyle.css">
   <title></title>
 </head>
-<body>
-  <h1 style="font-family: Verdana, sans-serif;font-size: 80px;">Compatatible</h1>
+<body style="margin: 0px; padding: 0px;">
+  <h1 style="font-family: Brush Script MT, Brush Script Std, cursive; font-size: 100px; margin: 5px;">Love Connect</h1>
   <div class="login">
 
     <div class="heading">
