--- a/Register.html
+++ b/Register.html
@@ -5,11 +5,12 @@
   <title></title>
 </head>
 <body>
+  <h1 style="font-family: Brush Script MT, Brush Script Std, cursive; font-size: 100px; margin: 5px;">Love Connect</h1>
+
 
   <div class="login">
 
     <div class="heading">
-
       <h1>Register</h1>
 
       <form action="#">
