--- a/AdminMenu.html
+++ b/AdminMenu.html
@@ -5,7 +5,7 @@
   <title></title>
 </head>
 <body>
-  <button style="width: 20%;">Logout</button>
+  <a href="Login.html"> <button style="width: 20%;">Logout</button> </a>
 
   <div style="width: 40%;" class="login">
 
