--- a/BrowseUser.html
+++ b/BrowseUser.html
@@ -9,7 +9,7 @@
   <div style="width: 40%;" class="login">
 
     <div class="heading">
-      <button style="width: 20%;">Main Menu</button>
+      <a href="Menu.html"> <button style="width: 20%;">Main Menu</button> </a>
 
       <img src="picture.png">
 
