added method post

--- a/Userdetails.html
+++ b/Userdetails.html
@@ -13,7 +13,7 @@
       <h1>User Details</h1>
       <hr>
 
-      <form action="#" name="CreateUser" onsubmit="return validateForm()">
+      <form action="userdetails.php" name="CreateUser" method="post" onsubmit="return validateForm() ">
         <div class="image-button">
             <h3>Profile Pic:</h3>
             <input type="file" id="img" name="img" accept="image/*">
