--- a/Login.html
+++ b/Login.html
@@ -12,14 +12,14 @@
 
       <h1>Sign in</h1>
 
-      <form action="#">
+      <form action="includes/login.inc.php">
 
         <div class="input-user">
-          <input type="text" class="form-control" placeholder="Username">
+          <input type="text" name="name" class="form-control" placeholder="Username">
         </div>
 
         <div class="input-password">
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" name="pwd" class="form-control" placeholder="Password">
         </div>
         <div class="submit-button">
           <button type="submit" class="float">Login</button>
