--- a/Register.html
+++ b/Register.html
@@ -13,20 +13,19 @@
     <div class="heading">
       <h1>Register</h1>
 
-      <form action="#">
+      <form action="includes/signup.inc.php" method="post">
 
         <div class="input-user">
-          <input type="text" class="form-control" placeholder="Username">
+          <input type="text" class="form-control" name="usersId" placeholder="Username">
         </div>
 
         <div class="input-password">
-          <input type="password" class="form-control" placeholder="Password">
-          <input type="password" class="form-control" placeholder="Confirm Password">
+          <input type="password" class="form-control" name="pwd" placeholder="Password">
+          <input type="password" class="form-control" name="pwd_confirm" placeholder="Confirm Password">
         </div>
 
-
         <div class="submit-button">
-          <button type="submit" class="float">Register</button>
+          <button type="submit" name="submit" class="float">Register</button>
         </div>
 
         <p><a href="Login.html">Sign In</a>   </p>
