--- a/Userdetails.html
+++ b/Userdetails.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="utf-8"/>
    <link rel="stylesheet" href="style/UserDetailStyle.css">
-  <title></title>
+  <title>User Details</title>
 </head>
 <body>
 
@@ -34,7 +35,7 @@
 
         <div class="slidecontainer">
           <h3>Age: <span id="demo"></span></h3>
-          <input style="width: 100%" name = "age"type="range" min="18" max="100" value="24" class="slider" id="myRange">
+          <input style="width: 100%" name = "age" type="range" min="18" max="100" value="24" class="slider" id="myRange">
           <script>
             var slider = document.getElementById("myRange");
             var output = document.getElementById("demo");
