--- a/Userdetails.html
+++ b/Userdetails.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-   <link rel="stylesheet" href="style/UserDetailStyle.css">
+   <link rel="stylesheet" href="style/InputStyle.css">
   <title>User Details</title>
 </head>
 <body>
@@ -10,7 +10,7 @@
 
   <script type="text/javascript" src="js/UserDetails.js"></script>
 
-  <div class="userDetails" style="width: 40%;">
+  <div class="box" style="width: 40%;">
       <h1>User Details</h1>
       <hr>
       <!-- onsubmit="return validateForm() -->
