--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<h3><a href="changePreferences.html">Change Preferences</a> </h3>
 	<h3><a href="BrowseUser.html">Browse User</a> </h3>
 	<h3><a href="AdminMenu.html">Admin Menu</a> </h3>
+	<h3><a href="noUsers.html">No Users</a> </h3>
+	<h3><a href="error.html">Error</a> </h3>
 
 </body>
 </html>
