Browse Users Updates

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 	<h3><a href="Userdetails.html">Userdetails</a> </h3>
 	<h3><a href="Menu.html">Menu</a> </h3>
 	<h3><a href="changePreferences.html">Change Preferences</a> </h3>
-	<h3><a href="BrowseUser.html">Browse User</a> </h3>
+	<h3><a href="BrowseUser.php">Browse User</a> </h3>
 	<h3><a href="AdminMenu.html">Admin Menu</a> </h3>
 	<h3><a href="noUsers.html">No Users</a> </h3>
 	<h3><a href="error.html">Error</a> </h3>
+	<h3><a href="test.php">Test</a> </h3>
 
 </body>
 </html>
