--- a/Menu.html
+++ b/Menu.html
@@ -15,11 +15,61 @@
   <a href="#">Browse Users</a>
   <a href="#">Contact Us</a>
 </div>
+<div class="header_image">
+	<div class="image_text">
+		<h1 style="font-size:50px"> Love Connect </h1>
+	</div>
+</div>
 
 <div id="main">
-  <h2>Website name</h2>
+  <h2>Love Connect</h2>
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
 </div>
+	
+
+	
+    <!--Browse Users-->
+    <div class="row">
+      <h2>BROWSE USERS</h2>
+      <div class="row_posters">
+        <img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl5.jpg" alt="" class="row_poster row_posterLarge">
+        <img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\boy6.jpg" alt="" class="row_poster row_posterLarge">
+        <img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl.webp" alt="" class="row_poster row_posterLarge">
+        <img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\boy3.jpg" alt="" class="row_poster row_posterLarge">
+		<img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\boy4.jpg" alt="" class="row_poster row_posterLarge">
+		<img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl3.jpg" alt="" class="row_poster row_posterLarge">
+		<img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl4.jpg" alt="" class="row_poster row_posterLarge">			
+	  	<img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl6.jpg" alt="" class="row_poster row_posterLarge">
+	  </div>
+    </div>
+	
+	 <!--View Matches-->
+    <div class="row">
+      <h2>VIEW MATCHES</h2>
+      <div class="row_posters">
+        <img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl5.jpg" alt="" class="row_poster row_posterLarge">
+        <img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\boy6.jpg" alt="" class="row_poster row_posterLarge">
+        <img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl.webp" alt="" class="row_poster row_posterLarge">
+        <img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\boy3.jpg" alt="" class="row_poster row_posterLarge">
+		<img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\boy4.jpg" alt="" class="row_poster row_posterLarge">
+		<img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl3.jpg" alt="" class="row_poster row_posterLarge">
+		<img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl4.jpg" alt="" class="row_poster row_posterLarge">			
+	  	<img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl6.jpg" alt="" class="row_poster row_posterLarge">
+	</div>
+    </div>
+
+    <!--Your Top 5 Matches!-->
+    <div class="row">
+      <h2>TOP 5 MATCHES</h2>
+      <div class="row_posters">
+        <img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl5.jpg" alt="" class="row_poster row_posterLarge">
+        <img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl.webp" alt="" class="row_poster row_posterLarge">
+		<img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl3.jpg" alt="" class="row_poster row_posterLarge">
+		<img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl4.jpg" alt="" class="row_poster row_posterLarge">			
+	  	<img src="C:\Users\35386\OneDrive\Desktop\Year 3\CS4116\images\girl6.jpg" alt="" class="row_poster row_posterLarge">
+
+      </div>
+    </div>
 
 <script>
 function openNav() {
