Added lang tag and removed a tag line causing a warning

--- a/changePreferences.html
+++ b/changePreferences.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
  <meta charset="utf-8"/>
  <link rel="stylesheet" href="style/InputStyle.css">
  <title>Preferences</title>
 </head>
 <body>
-  <script type="text/javascript" src="js/setPreferences.js"></script>
   <div class="box" style="width: 30%">
     <h1>Set Preferences</h1>
     <hr>
