Replaced script tag line

--- a/changePreferences.html
+++ b/changePreferences.html
@@ -6,6 +6,7 @@
  <title>Preferences</title>
 </head>
 <body>
+ <script type="text/javascript" src="js/setPreferences.js"></script>
   <div class="box" style="width: 30%">
     <h1>Set Preferences</h1>
     <hr>
