--- a/Menu.html
+++ b/Menu.html
@@ -10,16 +10,15 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="#">Browse Users</a>
   <a href="#">Edit Preferences</a>
-  <a href="#">View Matches</a>
-  <a href="#">Favourite Matches</a>
-  <a href="#">Browse Users</a>
+  <a href="viewMatches.html">View Matches</a>
+  <a href="#">Favourites</a>
   <a href="#">Contact Us</a>
 </div>
 <div class="header_image">
 	<div class="image_text">
 		<h1 style="font-size:50px"> Love Connect </h1>
 	</div>
-</div>
+</div> 
 
 <div id="main">
   <h2>Love Connect</h2>
@@ -82,6 +81,11 @@ function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
   document.getElementById("main").style.marginLeft= "0";
   document.body.style.backgroundColor = "white";
+}
+
+function viewMatches(){
+
+
 }
 </script>
    
