--- a/Menu.html
+++ b/Menu.html
@@ -8,9 +8,10 @@
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">Browse Users</a>
-  <a href="#">Edit Preferences</a>
+  <a href="BrowseUser.php">Browse Users</a>
+  <a href="changePreferences.html">Edit Preferences</a>
   <a href="viewMatches.html">View Matches</a>
+  <a href="EditUser.php">Edit Profile</a>
   <a href="#">Favourites</a>
   <a href="#">Contact Us</a>
 </div>
