--- a/changePreferences.html
+++ b/changePreferences.html
@@ -8,6 +8,7 @@
 <body>
  <script type="text/javascript" src="js/setPreferences.js"></script>
   <div class="box" style="width: 30%">
+    <a href="Menu.html"> <button style="width: 20%;">Main Menu</button> </a>
     <h1>Set Preferences</h1>
     <hr>
     <form action="preferences.php" name="setPreferences" method = "post"
