--- a/noUsers.html
+++ b/noUsers.html
@@ -5,6 +5,8 @@
 	<title>No Users Found</title>
 </head>
 <body>
+	 <a href="Menu.html"> <button style="width: 20%;">Main Menu</button> </a>
+
 	<h2 style="align-content: center;">Sorry no users can be found,<br>come back later!</p>
 
 </body>
