Change ban behaviour

--- a/AdminMenu.html
+++ b/AdminMenu.html
@@ -42,13 +42,8 @@
 
  
         <button>Ban</button>
-        <h3>Ban Duration :</h3>
-        <select name="banDuration" id="Ban_Duration:0">
-          <option value="Male">1 day</option>
-          <option value="Female">1 Week</option>
-          <option value="Female">1 Month</option>
-          <option value="Female">Forever</option>
-        </select>
+        <h3>Ban</h3>
+        <h3>Unban</h3>
         <button>Edit Page</button>
 
     </div>
