Fixed my last change

--- a/AdminMenu.html
+++ b/AdminMenu.html
@@ -42,8 +42,7 @@
 
  
         <button>Ban</button>
-        <h3>Ban</h3>
-        <h3>Unban</h3>
+        <button>Unban</button>
         <button>Edit Page</button>
 
     </div>
