--- a/AdminMenu.html
+++ b/AdminMenu.html
@@ -81,13 +81,7 @@
 
  
         <button>Ban</button>
-        <h3>Ban Duration :</h3>
-        <select name="banDuration" id="Ban_Duration:1">
-          <option value="Male">1 day</option>
-          <option value="Female">1 Week</option>
-          <option value="Female">1 Month</option>
-          <option value="Female">Forever</option>
-        </select>
+        <button>Unban</button>
         <button>Edit Page</button>
                 
         
