Implement Log out
Implemented log out, also register.html sign in directs to login.php not login.html

--- a/Register.html
+++ b/Register.html
@@ -27,7 +27,7 @@
           <button type="submit" name="submit" class="float">Register</button>
         </div>
 
-        <p><a href="Login.html">Sign In</a>   </p>
+        <p><a href="Login.php">Sign In</a>   </p>
         
       </form>
 	  <!-- <?php
