--- a/Register.html
+++ b/Register.html
@@ -1,54 +1,64 @@
-<!DOCTYPE html>
-<html>
-<head>
-   <link rel="stylesheet" href="LoginStyle.css">
-  <title>Register</title>
-</head>
-<body>
-  <h1 style="font-family: Brush Script MT, Brush Script Std, cursive; font-size: 100px; margin: 5px;">Love Connect</h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./style.css">
+
+    <title>Register</title>
+  </head>
+  <body>
+    <section class="login py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5">
+            <img src="images/website/hands.jpeg" class="img-fluid" alt="Website Logo">
+          </div>
+          <div class="col-lg-7 text-center py-3">
+            <h1>Register</h1>
+            <form action="includes/signup.inc.php" method="post">
+              <div class="form-row py-3 pt-5">
+                <div class="offset-1 col-lg-10">
+                  <input type="text" class="inp" name="usersId" placeholder="Username">
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="offset-1 col-lg-10">
+                  <input type="password" class="inp" name="pwd" placeholder="Password">
+                </div>
+              </div>
+              <div class="form-row py-3">
+                <div class="offset-1 col-lg-10">
+                  <input type="password" class="inp" name="pwd_confirm" placeholder="Confirm Password">
+                </div>
+              </div>              
+              <div class="form-row pt-5">
+                <div class="offset-1 col-lg-10">
+                  <button type="submit" name="submit" class="submit">Register</button>
+                </div>
+              </div>
+              <div class="form-row pt-5">
+                <div class="offset-1 col-lg-10">
+                  <a href="login.php">
+                    Login 
+                  </a>
+                </div>
+              </div>
+            </form>
+            
+          </div>
 
 
-  <div class="login">
-
-    <div class="heading">
-      <h1>Register</h1>
-      <form action="includes/signup.inc.php" method="post">
-
-        <div class="input-user">
-          <input type="text" class="form-control" name="usersId" placeholder="Username">
+          </div>
         </div>
+      </div>
+    </section>
 
-        <div class="input-password">
-          <input type="password" class="form-control" name="pwd" placeholder="Password">
-          <input type="password" class="form-control" name="pwd_confirm" placeholder="Confirm Password">
-        </div>
 
-        <div class="submit-button">
-          <button type="submit" name="submit" class="float">Register</button>
-        </div>
 
-        <p><a href="Login.php">Sign In</a>   </p>
-        
-      </form>
-	  <!-- <?php
-		if (isset($_GET["error"])) {
-			if ($_GET["error"] == "emptyinput") {
-				echo "<p>Fill in all fields!</p>";
-			}
-		}
-		else if ($_GET["error"] == "noname") {
-			echo "<p>Invalid username!</p>";
-		}
-		else if ($_GET["error"] == "pwdnomatch") {
-			echo "<p>Passwords do not match.</p>";
-		}
-		else if ($_GET["error"] == "usernametaken") {
-			echo "<p>Username is taken.</p>";
-		}
-		error_reporting(E_ALL & ~E_NOTICE);
-		?> -->
-    </div>
-	
-  </div>
-</body>
+  </body>
 </html>
