--- a/Userdetails.html
+++ b/Userdetails.html
@@ -1,45 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style/InputStyle.css">
-  <title>User Details</title>
-</head>
-<body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <script type="text/javascript" src="js/UserDetails.js"></script>
+    <link rel="stylesheet" type="text/css" href="style/userdetails.css">
 
-  <div class="box" style="width: 40%;">
-      <h1>User Details</h1>
-      <hr>
-      <!-- onsubmit="return validateForm() -->
-      
-      <form action="userdetails.php" name="CreateUser" method = "post"
-      onsubmit="return validateForm() " enctype="multipart/form-data"> 
-<!--     <form action="test.php"  method = "post"
-    enctype="multipart/form-data">  -->
-        <div class="image-button">
-            <h3>Profile Pic:</h3>
-            <input type="file" id="img" name="img" accept="image/*">
+    <title>User Details</title>
+  </head>
+    <div class="container ml-6">
+      <h1 class="heading">User Details</h1>
+      <form class="row g-3" action="userdetails.php" name="CreateUser" method = "post"
+      onsubmit="return validateForm() " enctype="multipart/form-data">
+
+        <div class="mt-5 col-md-12 text-center">
+          <label for="profilePic">Profile Picture</label>
+          <input type="file" name="img" id="img" accept="image/*" required>
         </div>
 
-        <div class="input-user">
-          <h3>Name:</h3>
-          <input type="text" name = "firstname" id="firstname" maxlength="20" placeholder="First Name">
-          <input type="text" name = "lastname" id="lastname" maxlength="20" placeholder="Surname">
+        <div class="mt-5 col-md-6">
+          <label for="firstname" class="form-label">Firstname</label>
+          <input type="text" name= "firstname" class="form-control" id="firstname" maxlength="20" required>
         </div>
 
-        <h3>Gender:</h3>
-        <select name="gender" id="gender">
-          <option value="Male">Male</option>
-          <option value="Female">Female</option>
-        </select>
 
-        <div class="slidecontainer">
-          <h3>Age: <span id="demo"></span></h3>
-          <input style="width: 100%" name = "age" type="range" min="18" max="100" value="24" class="slider" id="myRange">
+        <div class="mt-5 col-md-6">
+          <label for="lastname" class="form-label">Lastname</label>
+          <input type="text" name="lastname" class="form-control" id="lastname" maxlength="20" required>
+        </div>
+
+        <div class="mt-5 col-md-12">
+          <label for="gender">Gender</label>
+          <select class="form-control" id="gender" name="gender">
+            <option>Male</option>
+            <option>Female</option>
+          </select>
+        </div>
+
+        <div class="mt-5 col-md-12">
+          <label for="age">Age : <span id="demo"></label>
+          <input type="range" class="form-control-range" name="age" id="myRange" min="18" max="99" value="24">
           <script>
             var slider = document.getElementById("myRange");
             var output = document.getElementById("demo");
@@ -51,47 +55,59 @@
           </script>
         </div>
 
-        <div class="City">
-          <h3>City:</h3>
-          <input type="text" id = "city" name="city" maxlength= "30" placeholder="Limerick">
+        <div class="mt-5 col-md-6">
+          <label for="city" name="city" class="form-label">City</label>
+          <input type="text" class="form-control" id="city" name= "city" maxlength="60" required>
+        </div>      
+
+        <div class="mt-5 col-md-6">
+          <label for="uni" name="uni" class="form-label">University</label>
+          <input type="text" class="form-control" id="uni" name= "uni" maxlength="60">
         </div>
 
-        <div class="Bio">
-          <h3>Bio :</h3>
-          <textarea rows="5" maxlength="250" name="bio" id = "bio" placeholder="Bio..."></textarea>
+        <div class="mt-5 col-md-12">
+          <label for="bio" name="uni" class="form-label">Bio</label>
+          <textarea type="text" class="form-control" id="bio" name= "bio" maxlength="250" required></textarea>
         </div>
 
-        <div class="Uni">
-          <h3>University:</h3>
-          <input type="text" name = "uni" id = "uni" maxlength= "30" placeholder="University of Limerick">
-        </div>
+        <div class="mt-5 col-md-12">
+          <label for="job" name="job" class="form-label">Job</label>
+          <input type="text" class="form-control" id="job" name= "job" maxlength="60" required>
+          <small>If you are currently in University, enter Job as Student</small>
+        </div>                      
 
-        <div class="Job">
-          <h3>Job:</h3>
-          <input type="text" name  = "job" id = "job" maxlength = "30" placeholder="Student">
-        </div>
-
-        <div class="Hobbies">
-          <h3>Hobbies:</h3>
-          <input type="text" name="hobbies" id = "hobbies" maxlength = "100" placeholder="Swimming,Running,Computer Science ... ">
-        </div>
-
-        <h3>Interested In:</h3>
-        <select name="interest" id="interest">
-          <option value="Male">Male</option>
-          <option value="Female">Female</option>
-          <option value="Female">Both</option>
-        </select>
-
-        <div class="Contact">
-          <h3>Instagram Handle: </h3>
-          <input type="text" name="contact" id = "contact" maxlength="30" placeholder="johndoe321">
-        </div>
-
-        <div class="submit-button">
-          <button type="submit" class="float">Submit Profile</button>
+        <div class="mt-5 col-md-12">
+          <label for="hobbies" name="hobbies" class="form-label">Hobbies</label>
+          <input type="text" class="form-control" id="hobbies" name= "hobbies" maxlength="100" required>
+          <small>Enter hobbies like : Running,Swimming,Climbing. Maximum of 3</small>
         </div> 
+
+        <div class="mt-5 col-md-12">
+          <label for="gender">Interested In</label>
+          <select class="form-control" id="interest" name="interest">
+            <option>Male</option>
+            <option>Female</option>
+            <option>Both</option>
+          </select>
+          <small>More detailed preferences can be entered later</small>
+        </div>  
+
+      <div class="mt-5 col-md-12">
+        <label for="contact">Instagram</label>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <div class="input-group-text">@</div>
+          </div>
+          <input type="text" class="form-control" id="contact" name="contact" placeholder="Username">
+        </div>
+      </div>  
+
+      <div class="mt-5 mb-5 col-md-12 text-center">
+        <button type="submit" class="submit-button">Submit Profile</button>
+      </div> 
+
       </form>
-  </div>
-</body>
+    </div>
+
+  </body>
 </html>
