--- a/changePreferences.html
+++ b/changePreferences.html
@@ -1,57 +1,46 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
- <meta charset="utf-8"/>
- <link rel="stylesheet" href="style/InputStyle.css">
- <title>Preferences</title>
-</head>
-<body>
- <script type="text/javascript" src="js/setPreferences.js"></script>
-  <div class="box" style="width: 30%">
-    <a href="Menu.php"> <button style="width: 20%;">Main Menu</button> </a>
-    <h1>Set Preferences</h1>
-    <hr>
-    <form action="preferences.php" name="setPreferences" method = "post"
-    onsubmit="return validateAge()">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <div class="Gender">
-        <h3>Gender: </h3>
-        <select name="gender" id="gender">
-          <option value="Male">Male</option>
-          <option value="Female">Female</option>
-          <option value="Both">Both</option>
-        </select>
-      </div>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <link rel="stylesheet" type="text/css" href="style/userdetails.css">
 
-      <div class="Hobbies">
-        <h3>Hobbies:</h3>
-        <input type="text" name = "hobbies" id = "hobbies" placeholder="Jogging, Swimming">
-      </div>
+    <title>Preferences</title>
+  </head>
+  <body>
 
-      <div class="Uni">
-        <h3>University:</h3>
-        <input type="text" name = "uni" id = "uni" placeholder="University of Limerick">
-      </div>
+    <div class="container ml-6">
+      <h1 class="heading">Set Preferences</h1>
+      <form class="row g-3" action="preferences.php" name="setPreferences" method = "post"
+       onsubmit="return validateAge()">
+        <script type="text/javascript" src="js/setPreferences.js"></script>
+        <div class="mt-5 col-md-12">
+          <a href="Menu.php">Return To Main Menu</a>
+        </div>
 
-      <div class="City">
-        <h3>City:</h3>
-        <input type="text" name = "city" id = "city"  placeholder="Limerick">
-      </div>
+        <div class="mt-5 col-md-12">
+          <label for="gender">Gender</label>
+          <select class="form-control" id="gender" name="gender">
+            <option>Male</option>
+            <option>Female</option>
+            <option>Both</option>
+          </select>
+        </div>        
 
+        <div class="mt-5 col-md-12">
+          <label for="ageFrom">From : <span id="demoFrom"></label>
+          <input type="range" class="form-control-range" name="age_from" id="myRangeFrom" min="18" max="99" value="18">
+        </div>
 
-
-
-      <div class="slidecontainer">
-        <h3>Age Range:</h3>
-
-
-        <h4>From: <span id="demoFrom"></span></h4>
-        <input style="width: 100%" type="range" name = "age_from" min="18" max="99" value = "18" class="slider" id="myRangeFrom">
-
-
-        <h4>To: <span id="demoTo"></span></h4>
-        <input style="width: 100%" type="range" name = "age_to" min="18" max="99" value = "18" class="slider" id="myRangeTo">
+        <div class="mt-5 col-md-12">
+          <label for="ageTo">To : <span id="demoTo"></label>
+          <input type="range" class="form-control-range" name="age_to" id="myRangeTo" min="18" max="99" value="18">
+        </div>
 
         <script>
           var sliderFrom = document.getElementById("myRangeFrom");
@@ -67,22 +56,30 @@
           sliderTo.oninput = function() {
             outputTo.innerHTML = this.value;
           }            
-        </script>
-      </div>
+        </script>        
 
-      <h3><?php
-        echo $gender;
+        <div class="mt-5 col-md-6">
+          <label for="city" name="city" class="form-label">City</label>
+          <input type="text" class="form-control" id="city" name= "city" maxlength="60">
+        </div>      
 
-      ?>
-      </h3>
+        <div class="mt-5 col-md-6">
+          <label for="uni" name="uni" class="form-label">University</label>
+          <input type="text" class="form-control" id="uni" name= "uni" maxlength="60">
+        </div>                 
 
+        <div class="mt-5 col-md-12">
+          <label for="hobbies" name="hobbies" class="form-label">Hobbies</label>
+          <input type="text" class="form-control" id="hobbies" name= "hobbies" maxlength="100">
+          <small>Enter hobbies like : Running,Swimming,Climbing. Maximum of 3</small>
+        </div> 
 
-      <div class="submit-button">
-        <button type="submit" class="float">Browse Users</button>
-      </div>
+      <div class="mt-5 mb-5 col-md-12 text-center">
+        <button type="submit" class="submit-button">Browse Users</button>
+      </div> 
 
+      </form>
+    </div>
 
-    </form>
-  </div>
-</body>
+  </body>
 </html>
