--- a/Userdetails.html
+++ b/Userdetails.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script type="text/javascript" src="js/UserDetails.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style/userdetails.css">
 
@@ -14,23 +15,27 @@
   </head>
     <div class="container ml-6">
       <h1 class="heading">User Details</h1>
+      <small>All Fields Are Required</small>
+
       <form class="row g-3" action="userdetails.php" name="CreateUser" method = "post"
-      onsubmit="return validateForm() " enctype="multipart/form-data">
+      onsubmit="return validateInputFields()" enctype="multipart/form-data">
 
         <div class="mt-5 col-md-12 text-center">
-          <label for="profilePic">Profile Picture</label>
-          <input type="file" name="img" id="img" accept="image/*" required>
+          <label for="profilePic" class = "file">
+          <input type="file" name="img" id="img" accept="image/*" required>  
+          Profile Picture</label>
+          
         </div>
 
         <div class="mt-5 col-md-6">
           <label for="firstname" class="form-label">Firstname</label>
-          <input type="text" name= "firstname" class="form-control" id="firstname" maxlength="20" required>
+          <input type="text" name= "firstname" class="form-control" pattern="[a-zA-Z]++" title="No numbers or symbols allowed" id="firstname" maxlength="20" required>
         </div>
 
 
         <div class="mt-5 col-md-6">
           <label for="lastname" class="form-label">Lastname</label>
-          <input type="text" name="lastname" class="form-control" id="lastname" maxlength="20" required>
+          <input type="text" name="lastname" class="form-control" pattern="[a-zA-Z]+"  title="No numbers or symbols allowed" id="lastname" maxlength="20" required>
         </div>
 
         <div class="mt-5 col-md-12">
@@ -57,12 +62,12 @@
 
         <div class="mt-5 col-md-6">
           <label for="city" name="city" class="form-label">City</label>
-          <input type="text" class="form-control" id="city" name= "city" maxlength="60" required>
+          <input type="text" class="form-control" id="city" pattern="[a-zA-Z]+"  title="No numbers or symbols allowed" name= "city" maxlength="60" required>
         </div>      
 
         <div class="mt-5 col-md-6">
           <label for="uni" name="uni" class="form-label">University</label>
-          <input type="text" class="form-control" id="uni" name= "uni" maxlength="60">
+          <input type="text" class="form-control" id="uni" pattern="[a-zA-Z]+"  title="No numbers or symbols allowed" name= "uni" maxlength="60">
         </div>
 
         <div class="mt-5 col-md-12">
@@ -72,13 +77,13 @@
 
         <div class="mt-5 col-md-12">
           <label for="job" name="job" class="form-label">Job</label>
-          <input type="text" class="form-control" id="job" name= "job" maxlength="60" required>
+          <input type="text" class="form-control" id="job" pattern="[a-zA-Z]+"  title="No numbers or symbols allowed" name= "job" maxlength="60" required>
           <small>If you are currently in University, enter Job as Student</small>
         </div>                      
 
         <div class="mt-5 col-md-12">
           <label for="hobbies" name="hobbies" class="form-label">Hobbies</label>
-          <input type="text" class="form-control" id="hobbies" name= "hobbies" maxlength="100" required>
+          <input type="text" class="form-control" id="hobbies" name= "hobbies" maxlength="100" required> 
           <small>Enter hobbies like : Running,Swimming,Climbing. Maximum of 3</small>
         </div> 
 
@@ -98,12 +103,12 @@
           <div class="input-group-prepend">
             <div class="input-group-text">@</div>
           </div>
-          <input type="text" class="form-control" id="contact" name="contact" placeholder="Username">
+          <input type="text" class="form-control" id="contact" name="contact" placeholder="Username" required>
         </div>
       </div>  
 
       <div class="mt-5 mb-5 col-md-12 text-center">
-        <button type="submit" class="submit-button">Submit Profile</button>
+        <input type="submit" class = "submit" name="action" value="Create Profile">
       </div> 
 
       </form>
