--- a/changePreferences.html
+++ b/changePreferences.html
@@ -39,7 +39,7 @@
 
         <div class="mt-5 col-md-12">
           <label for="ageTo">To : <span id="demoTo"></label>
-          <input type="range" class="form-control-range" name="age_to" id="myRangeTo" min="18" max="99" value="18">
+          <input type="range" class="form-control-range" name="age_to" id="myRangeTo" min="18" max="99" value="99">
         </div>
 
         <script>
@@ -56,7 +56,11 @@
           sliderTo.oninput = function() {
             outputTo.innerHTML = this.value;
           }            
-        </script>        
+        </script>   
+
+        <div class="mt-5 col-md-12">
+          <h3>Advanced Options</h3>
+        </div>  
 
         <div class="mt-5 col-md-6">
           <label for="city" name="city" class="form-label">City</label>
@@ -79,7 +83,7 @@
       </form>
     </div>
     <div class="container ml-6 mt-5 mb-5">
-      <h1 class="heading">Advanced Search</h1>
+      <h1 class="heading">User Search</h1>
       <form class="row g-3" title = "Both firstname and lastname are required" action="searchedUserProfile.php" method="post">
         <div class="mt-5 mb-5 col-md-6">
           <label for="firstname" name="firstname" class="form-label">Firstname</label>
