Help and error screens

--- a/changePreferences.html
+++ b/changePreferences.html
@@ -16,11 +16,16 @@
 
     <div class="container ml-6">
       <h1 class="heading">Search Users</h1>
+
       <form class="row g-3" title = "You are not required to fill out every field" action="preferences.php" name="setPreferences" method = "post"
        onsubmit="return validateAge()">
+
         <script type="text/javascript" src="js/setPreferences.js"></script>
-        <div class="mt-5 col-md-12">
+        <div class="mt-5 col-md-6">
           <a href="Menu.php">Return To Main Menu</a>
+        </div>
+        <div class="mt-5 col-md-6">
+          <a href="Help/searchHelp.html">Info</a>
         </div>
 
         <div class="mt-5 col-md-12">
