Ban user / Admin updates

--- a/Help/browseHelp.html
+++ b/Help/browseHelp.html
@@ -27,7 +27,7 @@
 
 
         <div class="mt-5 col-md-12 text-center">
-          <p>The user you see in your browse user section are based of of the <strong>Interests</strong> you 
+          <p>The user you see in your browse user section are based off the <strong>Interests</strong> you 
             listed when you created your profile but <strong>what you entered into the search menu will overwrite your interests</strong></p>
           <img class= "img-fluid" src="Images/BrowseScreen.JPG"> 
         </div>        
