--- a/Error/adminError.html
+++ b/Error/adminError.html
@@ -1,14 +1,3 @@
-<?php
-//Check that the user is an admin
-session_start();
-if(!isset($_SESSION['admin_user'])){
-  header("location: index.php");
-}
-
-unset($_SESSION['userId_Editing']);
-
-?>
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -19,26 +8,25 @@ unset($_SESSION['userId_Editing']);
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="style/userdetails.css">
+    <link rel="stylesheet" type="text/css" href="../style/userdetails.css">
 
-    <title>Admin</title>
+    <title>Admin Search</title>
   </head>
   <body>
 
     <div class="container ml-6">
-      <h1 class="text-center">Admin Menu</h1>
       <div class="row g-3 mt-5">
 
         <div class="mt-5 col-md-12 text-center">
-          <a href="index.php">Logout</a>
+          <a href="../admin_Menu.php">Return To Main Menu</a>
         </div>
 
         <div class="mt-5 mb-5 col-md-12 text-center">
-          <a href="admin_ViewUsers.php">All Users - Info / Ban status</a>
+          <h2>Unable to find the requested user</h2>
         </div> 
 
         <div class="mb-5 col-md-12 text-center">
-          <a href="admin_Search.php">Search for a user</a>
+          <h3>The username is wrong</h3> 
         </div> 
 
                                         
