--- a/changePreferences.html
+++ b/changePreferences.html
@@ -69,18 +69,45 @@
 
         <div class="mt-5 col-md-6">
           <label for="city" name="city" class="form-label">City</label>
-          <input type="text" class="form-control" id="city" name= "city" maxlength="60">
+          <input type="text" class="form-control" id="city" name= "city" maxlength="60" list="cities">
+          <datalist id="cities">
+            <option>Limerick</option>
+            <option>Cork</option>
+            <option>Dublin</option>
+            <option>Belfast</option>
+            <option>London</option>
+            <option>New York</option>
+            <option>Tokyo</option>
+          </datalist>
         </div>      
 
         <div class="mt-5 col-md-6">
           <label for="uni" name="uni" class="form-label">University</label>
-          <input type="text" class="form-control" id="uni" name= "uni" maxlength="60">
+          <input type="text" class="form-control" id="uni" name= "uni" maxlength="60" list="universities">
+          <datalist id="universities">
+            <option>University Of Limerick</option>
+            <option>NUI Galway</option>
+            <option>University College Dublin</option>
+            <option>Trinity College</option>
+            <option>Dublin City College</option>
+            <option>Maynooth University</option>
+            <option>University College Dublin</option>
+          </datalist>
         </div>                 
 
         <div class="mt-5 col-md-12">
           <label for="hobbies" name="hobbies" class="form-label">Hobbies</label>
-          <input type="text" class="form-control" id="hobbies" name= "hobbies" maxlength="100">
+          <input type="text" class="form-control" id="hobbies" name= "hobbies" maxlength="100" list="hobbies">
           <small>Enter hobbies like : Running,Swimming,Climbing. Maximum of 3</small>
+          <datalist id="hobbies">
+            <option>Cycling</option>
+            <option>Swimming</option>
+            <option>Running</option>
+            <option>Football</option>
+            <option>GAA</option>
+            <option>Tennis</option>
+            <option>Gaming</option>
+          </datalist>
         </div>  
       <div class="mt-5 mb-5 col-md-12 text-center">
         <button type="submit" class="submit-button" title="Searching will provided you with an array of users that match the criteria you have set">Search</button>
