--- a/Help/searchHelp.html
+++ b/Help/searchHelp.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/UserDetails.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style/userdetails.css">
-
+     <link rel="icon" type="image/x-icon" href="../images/website/icon.png">
     <title>Help</title>
   </head>
   <body>
