--- a/Error/noBestMatch.html
+++ b/Error/noBestMatch.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+     <link rel="icon" type="image/x-icon" href="../images/website/icon.png">
     <link rel="stylesheet" type="text/css" href="../style/userdetails.css">
 
     <title>Matches</title>
@@ -26,7 +26,7 @@
         </div> 
 
         <div class="mb-5 col-md-12 text-center">
-          <h3>Sorry none of our users are good enough for you</h3> 
+          <h4>This is probably because none of our users are from the same location as you or you liked/disliked all your best matches before this :(</h4> 
         </div> 
 
                                         
