--- a/Help/browseHelp.html
+++ b/Help/browseHelp.html
@@ -8,9 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script type="text/javascript" src="js/UserDetails.js"></script>
-
+     <link rel="icon" type="image/x-icon" href="../images/website/icon.png">
     <link rel="stylesheet" type="text/css" href="style/userdetails.css">
-
+    <link rel="icon" type="image/x-icon" href="../images/website/icon.png">
     <title>Help</title>
   </head>
   <body>
