Register html redirects to correct login page

--- a/Register.html
+++ b/Register.html
@@ -43,7 +43,7 @@
               </div>
               <div class="form-row pt-5">
                 <div class="offset-1 col-lg-10">
-                  <a href="login.php">
+                  <a href="Login.php">
                     Login 
                   </a>
                 </div>
