Added more visual empty input error handling

--- a/Register.html
+++ b/Register.html
@@ -23,17 +23,23 @@
             <form action="includes/signup.inc.php" method="post">
               <div class="form-row py-3 pt-5">
                 <div class="offset-1 col-lg-10">
-                  <input type="text" class="inp" name="usersId" placeholder="Username">
+                <input type="text" class="inp" name="usersId" placeholder="Enter Username" required
+                oninvalid="this.setCustomValidity('Enter User Name Here')"
+                oninput="this.setCustomValidity('')">
                 </div>
               </div>
               <div class="form-row">
                 <div class="offset-1 col-lg-10">
-                  <input type="password" class="inp" name="pwd" placeholder="Password">
+                <input type="password" class="inp" name="pwd" placeholder="Enter Password" required
+                oninvalid="this.setCustomValidity('Enter Password Here')"
+                oninput="this.setCustomValidity('')">
                 </div>
               </div>
               <div class="form-row py-3">
                 <div class="offset-1 col-lg-10">
-                  <input type="password" class="inp" name="pwd_confirm" placeholder="Confirm Password">
+                <input type="password" class="inp" name="pwd_confirm" placeholder="Confirm Password" required
+                oninvalid="this.setCustomValidity('Confirm Password Here')"
+                oninput="this.setCustomValidity('')">
                 </div>
               </div>              
               <div class="form-row pt-5">
