undid format change

--- a/Userdetails.html
+++ b/Userdetails.html
@@ -103,7 +103,7 @@
         <div class="mt-5 col-md-12">
           <label for="hobbies" name="hobbies" class="form-label">Hobbies</label>
           <input type="text" class="form-control" id="hobbies" name= "hobbies" maxlength="100" required> 
-          <small>Enter hobbies like : Running, Swimming or Climbing. Maximum of 3</small>
+          <small>Enter hobbies like : Running,Swimming,Climbing. Maximum of 3</small>
         </div> 
 
         <div class="mt-5 col-md-12">
