--- a/Error/noFavs.html
+++ b/Error/noFavs.html
@@ -10,7 +10,7 @@
      <link rel="icon" type="image/x-icon" href="../images/website/icon.png">
     <link rel="stylesheet" type="text/css" href="../style/userdetails.css">
 
-    <title>Matches</title>
+    <title>No Favourites</title>
   </head>
   <body>
 
